# appcraft-logs

./: .gitignore  LICENSE  MANIFEST.in  README.md  README.rst  docker-compose.md  requirements.txt  setup.cfg
appcraft_logging/: admin.py  apps.py  middleware.py  models.py  utils.py
appcraft_logging/clickhouse/: changelist.py  models.py
appcraft_logging/migrations/: 0001_initial.py
backend/: exceptions.py  fields.py  paginators.py  utils.py
backend/db/: enums.py  managers.py  models.py  query.py
backend/db/media/: models.py
seeds/: user_seeder.py
seeds/management/commands/: seed.py
server/: settings.py  urls.py
users/: models.py  serializers.py  urls.py  validators.py  views.py
users/migrations/: 0001_initial.py
