[metadata]
name = appcraft-logging
version = 0.9.1
description = A Django app that uses Clickhouse database to store logs
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://appcraft.pro/
author = AppCraft
author_email = appcraftdeveloper@gmail.com
license = BSD-3-Clause  # Example license
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 3.1
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
python_requires = >=3.6
install_requires =
    Django >= 3.1
    pytils >= 0.3
    infi.clickhouse-orm >= 2.1.1
